# AutoHotKey

./: .gitignore  README.md
WindowControls/: alt_controls.ahk  maximize_window.ahk  minimize_window.ahk  nvimqt_fullscreen.ahk  restore_window.ahk  screen_swap.ahk  tests.ahk  utils.ahk  win_nav.ahk  zoneswap.ahk
WindowControls/screen_swap/: Cargo.toml
WindowControls/screen_swap/src/: lib.rs  screen_swap.ahk
WindowControls/screenswap/: Cargo.toml
WindowControls/screenswap/src/: input.ahk  lib.rs  misc.rs  monitor.rs  window.rs
WindowControls/window_controls/: Cargo.toml
WindowControls/window_controls/src/: lib.rs  monitor.rs  window.rs
WindowControls/zone_swap/: Cargo.toml
WindowControls/zone_swap/src/: input.ahk
WindowControls/zoneswap/: Cargo.toml
WindowControls/zoneswap/src/: lib.rs
