[package]
name = "screenswap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.91"
ctor = "0.2.8"
once_cell = "1.20.2"
windows = { version = "0.58.0", features = [
    "Win32", 
    "Win32_UI", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 3