[package]
name = "zoneswap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
whoami = "1.5.1"
windows = { version = "0.58.0", features = [
    "Win32", 
    "Win32_UI", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-sys = "0.59.0"
